<resources>
    <string name="app_name" translatable="false">Computacion Movil</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="NULL" translatable="false">NULL</string>
    <string name="fileDistances" translatable="false">distances.txt</string>

    <string name="main_tittle_total_m">Total meters traveled -> </string>
    <string name="main_tittle_total_medition">Total measurements made -> </string>
    <string name="main_button_loadSaved">LOAD ROUTES</string>
    <string name="main_button_activityLocation">ACTIVITY LOCATION</string>
    <string name="main_button_activityMaps">ACTIVITY MAPS</string>
    <string name="main_button_newReco">NEW ROUTE</string>
    <string name="main_button_conf">Conf</string>
    <string name="main_text_errorLecturaFichero">One of the files on the route loading screen is damaged or corrupted, this may be due to a partial uninstallation of the application. Proceeding to delete these files.</string>
    <string name="main_text_errorSaveRecorr">It is not possible to save a tour if there are no measures for it.</string>

    <string name="setting_button_save">SAVE</string>
    <string name="setting_button_cancel">@android:string/cancel</string>

    <string name="createRoute_text_name">Route name</string>
    <string name="createRoute_textInput_name">Name</string>
    <string name="createRoute_text_type">Antenna type</string>
    <string name="createRoute_button_create">CREATE</string>
    <string name="createRoute_button_cancel">@android:string/cancel</string>
    <string name="createRoute_checkbox_4G">4G</string>
    <string name="createRoute_checkbox_3G">3G</string>
    <string name="createRoute_checkbox_2G">2G</string>
    <string name="createRoute_tittle_interval">Select the update interval for measurements(meters)</string>
    <string name="createRoute_textInput_interval" translatable="false">5</string>
    <string name="createRoute_tittle_selectSim">Two SIMs detected, select the SIM to do measurements</string>
    <string name="createRoute_checkbox_SIM1" translatable="false">SIM 1</string>
    <string name="createRoute_checkbox_SIM2" translatable="false">SIM 2</string>

    <string name="createRoute_error_name">The name cannot be empty</string>
    <string name="createRoute_error_nameRepeat">Repeated name</string>
    <string name="createRoute_error_interval">The interval in meters must be between 1 and 100 meters</string>
    <string name="createRoute_error_antenna">ANTENNA ERROR</string>
    <string name="createRoute_error_SIM">At least one SIM must be selected</string>

    <string name="loadRoute_button_exit">EXIT</string>
    <string name="loadRoute_button_cancel">DELETE</string>
    <string name="loadRoute_button_load">LOAD</string>
    <string name="loadRoute_text_errorLoad">Could not load because there is no selected item</string>
    <string name="loadRoute_text_errorDelete">The item could not be deleted because there is no item selected</string>
    <string name="loadRoute_text_min" translatable="false">MIN:</string>
    <string name="loadRoute_text_max" translatable="false">,MAX:</string>
    <string name="loadRoute_text_med" translatable="false">,MED:</string>
    <string name="loadRoute_text_nmeasures" translatable="false">,Nº:</string>
    <string name="loadRoute_text_deleted">deleted</string>

    <string name="mapsRouteActivity_map" translatable="false">Maps</string>
    <string name="mapsRouteActivity_button_exit">EXIT</string>
    <string name="mapsRouteActivity_button_save">SAVE</string>
    <string name="mapsRouteActivity_button_newStage">NEW STAGE</string>
    <string name="mapsRouteActivity_text_nameRoute">Name route: </string>
    <string name="mapsRouteActivity_text_selectedAntennas">Selected antenna: </string>
    <string name="mapsRouteActivity_text_nameSIMs">SIM name: </string>
    <string name="mapsRouteActivity_text_nameStage">Current stage: </string>
    <string name="mapsRouteActivity_text_titleStage">Stage</string>
    <string name="mapsRoute_text_Tower">Telephone tower</string>
    <string name="mapsRoute_error_SIM">Sim selected invalid or out of order</string>
    <string name="mapsRoute_error_Stage">It is not possible to change stages if there are no measurements recorded for the current stage</string>
    <string name="mapsRoute_error_MaximunStage">Maximum stage reached</string>
    <string name="mapsRoute_error_Antenna">The selected antenna is not operational for this SIM</string>
    <string name="mapsRoute_error_limitMeasurement">Maximum number of measurements for this stage reached, starting new stage</string>
    <string name="mapsRoute_error_intervalDistance">Waiting at specified distance</string>
    <string name="mapsRoute_error_readyAntena">Waiting for data on antennas</string>

    <string name="mapsActivity_map" translatable="false">Maps</string>
    <string name="mapsActivity_button_save">SAVE</string>

    <string name="medida_textDescription1">Stage </string>
    <string name="medida_textDescription2">, antenna </string>
    <string name="medida_textDescription3">, position </string>
    <string name="medida_textDescription4">, coverage </string>

    <string name="loadRouteMaps_button_exit">EXIT</string>
    <string name="loadRouteMaps_button_MoreData">MORE DATA</string>

    <string name="loadRouteData_button_exit">EXIT</string>
    <string name="loadRouteData_button_Return">RETURN</string>
    <string name="loadRouteData_text_DescriptionList">Stage</string>
    <string name="loadRouteData_text_Description1">Stage number -> </string>
    <string name="loadRouteData_text_Description2">Measured minimum -> </string>
    <string name="loadRouteData_text_Description3">Measured maximum -> </string>
    <string name="loadRouteData_text_Description4">Measurements -> </string>
    <string name="loadRouteData_text_Description5">Average measurements -> </string>
    <string name="loadRouteData_text_textDefect">Select one item</string>

</resources>