<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".CreateRouteActivity">

    <TextView
        android:id="@+id/CreateRouteTittleName"
        android:layout_width="191dp"
        android:layout_height="25dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/createRoute_text_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/CreateRoute_Tittle_AntennaType"
        android:layout_width="219dp"
        android:layout_height="25dp"
        android:gravity="center"
        android:text="@string/createRoute_text_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createRoute_Text_NameError" />

    <EditText
        android:id="@+id/createRoute_Text_InputName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:backgroundTint="#000000"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/createRoute_textInput_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="Example"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CreateRouteTittleName" />

    <Button
        android:id="@+id/createRoute_Button_Create"
        android:layout_width="158dp"
        android:layout_height="60dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:onClick="createRoute"
        android:text="@string/createRoute_button_create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/createRoute_Button_Cancel"
        android:layout_width="158dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:onClick="cancelMainActivity"
        android:text="@string/createRoute_button_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/createRoute_CheckBox_Antenna4G"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:checked="true"
        android:text="@string/createRoute_checkbox_4G"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CreateRoute_Tittle_AntennaType" />

    <CheckBox
        android:id="@+id/createRoute_CheckBox_Antenna3G"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:text="@string/createRoute_checkbox_3G"
        app:layout_constraintEnd_toStartOf="@+id/createRoute_CheckBox_Antenna2G"
        app:layout_constraintStart_toEndOf="@+id/createRoute_CheckBox_Antenna4G"
        app:layout_constraintTop_toBottomOf="@+id/CreateRoute_Tittle_AntennaType" />

    <CheckBox
        android:id="@+id/createRoute_CheckBox_Antenna2G"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:text="@string/createRoute_checkbox_2G"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CreateRoute_Tittle_AntennaType" />

    <EditText
        android:id="@+id/createRoute_Text_InputInterval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#000000"
        android:ems="10"
        android:gravity="center"
        android:inputType="number"
        android:minHeight="48dp"
        android:text="@string/createRoute_textInput_interval"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CreateRoute_Tittle_Interval" />

    <TextView
        android:id="@+id/CreateRoute_Tittle_Interval"
        android:layout_width="327dp"
        android:layout_height="34dp"
        android:gravity="center"
        android:text="@string/createRoute_tittle_interval"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createRoute_Text_AntennaError" />

    <TextView
        android:id="@+id/CreateRoute_Tittle_SelectedSIM"
        android:layout_width="229dp"
        android:layout_height="34dp"
        android:gravity="center"
        android:text="@string/createRoute_tittle_selectSim"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createRoute_Text_IntervalError" />

    <CheckBox
        android:id="@+id/createRoute_CheckBox_SIM1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:checked="true"
        android:text="@string/createRoute_checkbox_SIM1"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/createRoute_CheckBox_SIM2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CreateRoute_Tittle_SelectedSIM" />

    <CheckBox
        android:id="@+id/createRoute_CheckBox_SIM2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:text="@string/createRoute_checkbox_SIM2"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/createRoute_CheckBox_SIM1"
        app:layout_constraintTop_toBottomOf="@+id/CreateRoute_Tittle_SelectedSIM" />

    <TextView
        android:id="@+id/createRoute_Text_AntennaError"
        android:layout_width="331dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:textColor="#FF0000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createRoute_CheckBox_Antenna3G" />

    <TextView
        android:id="@+id/createRoute_Text_NameError"
        android:layout_width="331dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:textColor="#FF0000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createRoute_Text_InputName" />

    <TextView
        android:id="@+id/createRoute_Text_IntervalError"
        android:layout_width="331dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:textColor="#FF0000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createRoute_Text_InputInterval" />

    <TextView
        android:id="@+id/createRoute_Text_SimError"
        android:layout_width="331dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:textColor="#FF0000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createRoute_CheckBox_SIM1" />

</androidx.constraintlayout.widget.ConstraintLayout>
