<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapsRoutesActivity">

    <Button
        android:id="@+id/button8"
        android:layout_width="158dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:onClick="exitRoute"
        android:text="@string/mapsRouteActivity_button_exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button9"
        android:layout_width="158dp"
        android:layout_height="60dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:onClick="saveRoute"
        android:text="@string/mapsRouteActivity_button_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="0dp"
        android:layout_height="450dp"
        android:contentDescription="@string/mapsRouteActivity_map"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/valueReadAntennas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NULL"
        app:layout_constraintBottom_toTopOf="@+id/button9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapView" />

    <TextView
        android:id="@+id/textNameRoute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/mapsRouteActivity_text_nameRoute"
        app:layout_constraintBottom_toTopOf="@+id/valueReadAntennas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapView" />

    <TextView
        android:id="@+id/valueNameRoute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NULL"
        app:layout_constraintBottom_toTopOf="@+id/valueReadAntennas"
        app:layout_constraintStart_toEndOf="@+id/textNameRoute"
        app:layout_constraintTop_toBottomOf="@+id/mapView" />

    <TextView
        android:id="@+id/textSelectedAntennas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mapsRouteActivity_text_selectedAntennas"
        app:layout_constraintBottom_toTopOf="@+id/valueReadAntennas"
        app:layout_constraintEnd_toStartOf="@+id/valueSelectedAntennas"
        app:layout_constraintTop_toBottomOf="@+id/mapView" />

    <TextView
        android:id="@+id/valueSelectedAntennas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/NULL"
        app:layout_constraintBottom_toTopOf="@+id/valueReadAntennas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapView" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/NULL"
        android:text=" "
        app:layout_constraintBottom_toTopOf="@+id/valueReadAntennas"
        app:layout_constraintEnd_toStartOf="@+id/textSelectedAntennas"
        app:layout_constraintStart_toEndOf="@+id/valueNameRoute"
        app:layout_constraintTop_toBottomOf="@+id/mapView" />

</androidx.constraintlayout.widget.ConstraintLayout>